2003-07-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Make the album title and artist fields GtkEntrys

	* src/sj-main.c:
	Handle editing the album title and artist fields. If the artist is
	changed, change the track artists too.

	Thanks to Mike Hearn for doing this patch.

	* Makefile.am:
	Ignore the scrollkeeper files left after uninstall so that
	distcheck works.

2003-07-29  Ross Burton  <ross@burtonini.com>

	* help/*:
	Added online help files.

	* Makefile.am:
	* configure.in:
	Include the help files in the build and dist.

	* src/Makefile.am:
	Add more path defines.
	* src/sj-about.c:
	Credit Mike Hearn for documentation.
	* src/sj-main.c:
	Add callback for Help, construct the GnomeProgram correctly and
	fixup glade path.

	* sound-juicer.spec.in:
	Build-depend on ScrollKeeper.
	
	All of this is from Mike Hearn, closing #116914.

2003-07-29  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Add product name as per the HIG. Thanks to Mike Hearn for
	noticing. Closes #116925.

2003-07-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in: upd for libbacon update
	* src/Makefile.am:
	* src/bacon-cd-selection.c:
	* src/cd-drive.c:
	* src/cd-drive.h: ditto

2003-07-04 Christian Schaller <Uraeus@gnome.org>

	* Makefile.am, sound-juicer.spec.in
	Fix the spec file and make sure it gets packaged

2003-07-03  Ross Burton  <ross@burtonini.com>

	* src/sj-musicbrainz.c:
	If Musicbrainz doesn't know how long a track is, work it out from
	the sector size.

	* src/mb-test.c:
	Ditto.

	Thanks to Bastien again for this patch.

2003-07-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.h
	* src/sj-extracting.c:
	Make parse_pattern public as filepath_parse_pattern()

	* data/sound-juicer.glade:
	Add a label as an example for the path.

	* src/sj-prefs.c:
	Update the example path label.

	These patches are 90% from Bastien Nocera.
	
2003-07-02  Ross Burton  <ross@burtonini.com>

	* src/sj-utils.c: