@@ -1,5 +1,11 @@
 2003-07-30  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	When editing the album name/title, propogate the change to the
+	tracks. Thanks to Mike Hearn again.
+	
+2003-07-30  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Make the album title and artist fields GtkEntrys
 
